tests/react_dom/react_dom.exp
Error ----------------------------------------------------------------------------------- dangerouslySetInnerHTML.js:5:1

Cannot create `article` element because boolean [1] is incompatible with object type [2] in property
`dangerouslySetInnerHTML`.

   dangerouslySetInnerHTML.js:5:1
     5| <article dangerouslySetInnerHTML />; // Error: Expected object
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   dangerouslySetInnerHTML.js:5:10
     5| <article dangerouslySetInnerHTML />; // Error: Expected object
                 ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:398:29
   398|   dangerouslySetInnerHTML?: { __html: string },
                                    ^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- dangerouslySetInnerHTML.js:6:1

Cannot create `article` element because string [1] is incompatible with object type [2] in property
`dangerouslySetInnerHTML`.

   dangerouslySetInnerHTML.js:6:1
     6| <article dangerouslySetInnerHTML="<blink>Hello</blink>" />; // Error: Expected object
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   dangerouslySetInnerHTML.js:6:34
     6| <article dangerouslySetInnerHTML="<blink>Hello</blink>" />; // Error: Expected object
                                         ^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:398:29
   398|   dangerouslySetInnerHTML?: { __html: string },
                                    ^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- dangerouslySetInnerHTML.js:8:1

Cannot create `article` element because property `__html` is missing in object literal [1] but exists in object type [2]
in property `dangerouslySetInnerHTML`.

   dangerouslySetInnerHTML.js:8:1
     8| <article dangerouslySetInnerHTML={{ html: "<blink>Hello</blink>" }} />; // Error: Missing __html
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   dangerouslySetInnerHTML.js:8:35
     8| <article dangerouslySetInnerHTML={{ html: "<blink>Hello</blink>" }} />; // Error: Missing __html
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:398:29
   398|   dangerouslySetInnerHTML?: { __html: string },
                                    ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- props_boolean.js:7:1

Cannot create `span` element because in property `hidden`:
 - Either null [1] is incompatible with empty string [2].
 - Or null [1] is incompatible with string literal `hidden` [3].
 - Or null [1] is incompatible with boolean [4].

   props_boolean.js:7:1
     7| <span hidden={null} />; // Error: Expected DOM boolean
        ^^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:7:15
     7| <span hidden={null} />; // Error: Expected DOM boolean
                      ^^^^ [1]
   <BUILTINS>/react-dom.js:463:5
   463|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:464:5
   464|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:465:5
   465|   | boolean;
            ^^^^^^^ [4]


Error --------------------------------------------------------------------------------------------- props_boolean.js:8:1

Cannot create `span` element because in property `hidden`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with string literal `hidden` [3].
 - Or string [1] is incompatible with boolean [4].

   props_boolean.js:8:1
     8| <span hidden="true" />; // Error: Expected DOM boolean
        ^^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:8:14
     8| <span hidden="true" />; // Error: Expected DOM boolean
                     ^^^^^^ [1]
   <BUILTINS>/react-dom.js:463:5
   463|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:464:5
   464|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:465:5
   465|   | boolean;
            ^^^^^^^ [4]


Error --------------------------------------------------------------------------------------------- props_boolean.js:9:1

Cannot create `span` element because in property `hidden`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with string literal `hidden` [3].
 - Or string [1] is incompatible with boolean [4].

   props_boolean.js:9:1
     9| <span hidden="false" />; // Error: Expected DOM boolean
        ^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:9:14
     9| <span hidden="false" />; // Error: Expected DOM boolean
                     ^^^^^^^ [1]
   <BUILTINS>/react-dom.js:463:5
   463|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:464:5
   464|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:465:5
   465|   | boolean;
            ^^^^^^^ [4]


Error -------------------------------------------------------------------------------------------- props_boolean.js:11:1

Cannot create `span` element because in property `hidden`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with string literal `hidden` [3].
 - Or string [1] is incompatible with boolean [4].

   props_boolean.js:11:1
    11| <span hidden="yes" />; // Error: Expected DOM boolean
        ^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:11:14
    11| <span hidden="yes" />; // Error: Expected DOM boolean
                     ^^^^^ [1]
   <BUILTINS>/react-dom.js:463:5
   463|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:464:5
   464|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:465:5
   465|   | boolean;
            ^^^^^^^ [4]


Error -------------------------------------------------------------------------------------------- props_boolean.js:15:1

Cannot create `span` element because in property `hidden`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with string literal `hidden` [3].
 - Or string [1] is incompatible with boolean [4].

   props_boolean.js:15:1
    15| <span hidden="Hidden" />; // Currently an error
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:15:14
    15| <span hidden="Hidden" />; // Currently an error
                     ^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:463:5
   463|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:464:5
   464|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:465:5
   465|   | boolean;
            ^^^^^^^ [4]


Error ----------------------------------------------------------------------------------- props_booleanish_string.js:7:1

Cannot create `div` element because in property `contentEditable`:
 - Either null [1] is incompatible with empty string [2].
 - Or null [1] is incompatible with enum [3].
 - Or null [1] is incompatible with boolean [4].

   props_booleanish_string.js:7:1
     7| <div contentEditable={null} />; // Error: Expected booleanish string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_booleanish_string.js:7:23
     7| <div contentEditable={null} />; // Error: Expected booleanish string
                              ^^^^ [1]
   <BUILTINS>/react-dom.js:458:5
   458|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:459:5
   459|   | $TODO$CaseInsensitive<"true" | "false">
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:460:5
   460|   | boolean;
            ^^^^^^^ [4]


Error ---------------------------------------------------------------------------------- props_booleanish_string.js:11:1

Cannot create `div` element because in property `contentEditable`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with enum [3].
 - Or string [1] is incompatible with boolean [4].

   props_booleanish_string.js:11:1
    11| <div contentEditable="yes" />; // Error: Expected booleanish string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_booleanish_string.js:11:22
    11| <div contentEditable="yes" />; // Error: Expected booleanish string
                             ^^^^^ [1]
   <BUILTINS>/react-dom.js:458:5
   458|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:459:5
   459|   | $TODO$CaseInsensitive<"true" | "false">
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:460:5
   460|   | boolean;
            ^^^^^^^ [4]


Error ---------------------------------------------------------------------------------- props_booleanish_string.js:12:1

Cannot create `div` element because in property `contentEditable`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with enum [3].
 - Or string [1] is incompatible with boolean [4].

   props_booleanish_string.js:12:1
    12| <div contentEditable="contentEditable" />; // Error: Expected booleanish string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_booleanish_string.js:12:22
    12| <div contentEditable="contentEditable" />; // Error: Expected booleanish string
                             ^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:458:5
   458|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:459:5
   459|   | $TODO$CaseInsensitive<"true" | "false">
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:460:5
   460|   | boolean;
            ^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------ props_enum.js:5:1

Cannot create `header` element because boolean [1] is incompatible with enum [2] in property `dir`.

   props_enum.js:5:1
     5| <header dir />; // Error: Expected enum
        ^^^^^^^^^^^^^^

References:
   props_enum.js:5:9
     5| <header dir />; // Error: Expected enum
                ^^^ [1]
   <BUILTINS>/react-dom.js:422:9
   422|   dir?: $TODO$CaseInsensitive<"ltr" | "rtl" | "LTR" | "RTL" | "auto">,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- props_enum.js:11:1

Cannot create `header` element because string [1] is incompatible with enum [2] in property `dir`.

   props_enum.js:11:1
    11| <header dir="Ltr" />; // currently an error
        ^^^^^^^^^^^^^^^^^^^^

References:
   props_enum.js:11:13
    11| <header dir="Ltr" />; // currently an error
                    ^^^^^ [1]
   <BUILTINS>/react-dom.js:422:9
   422|   dir?: $TODO$CaseInsensitive<"ltr" | "rtl" | "LTR" | "RTL" | "auto">,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- props_number.js:5:1

Cannot create `h1` element because boolean [1] is incompatible with number [2] in property `tabIndex`.

   props_number.js:5:1
     5| <h1 tabIndex />; // Error: Expected number
        ^^^^^^^^^^^^^^^

References:
   props_number.js:5:5
     5| <h1 tabIndex />; // Error: Expected number
            ^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:403:14
   403|   tabIndex?: ReactDOM$Number,
                     ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- props_number.js:10:1

Cannot create `h1` element because string [1] is incompatible with number [2] in property `tabIndex`.

   props_number.js:10:1
    10| <h1 tabIndex="foo" />; // Error: Expected number
        ^^^^^^^^^^^^^^^^^^^^^

References:
   props_number.js:10:14
    10| <h1 tabIndex="foo" />; // Error: Expected number
                     ^^^^^ [1]
   <BUILTINS>/react-dom.js:403:14
   403|   tabIndex?: ReactDOM$Number,
                     ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- props_number.js:11:1

Cannot create `h1` element because string [1] is incompatible with number [2] in property `tabIndex`.

   props_number.js:11:1
    11| <h1 tabIndex="1" />; // Error: Expected number
        ^^^^^^^^^^^^^^^^^^^

References:
   props_number.js:11:14
    11| <h1 tabIndex="1" />; // Error: Expected number
                     ^^^ [1]
   <BUILTINS>/react-dom.js:403:14
   403|   tabIndex?: ReactDOM$Number,
                     ^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- props_string.js:6:1

Cannot create `html` element because number [1] is incompatible with string [2] in property `id`.

   props_string.js:6:1
     6| <html id={42} />; // Error: Expected string
        ^^^^^^^^^^^^^^^^

References:
   props_string.js:6:11
     6| <html id={42} />; // Error: Expected string
                  ^^ [1]
   <BUILTINS>/react-dom.js:399:8
   399|   id?: string,
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- props_style.js:6:1

Cannot create `footer` element because string [1] is incompatible with `ReactDOM$Style` [2] in property `style`.

   props_style.js:6:1
     6| <footer style="margin-right: 1em;" />; // Error: Expected object
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_style.js:6:15
     6| <footer style="margin-right: 1em;" />; // Error: Expected object
                      ^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:401:11
   401|   style?: ReactDOM$Style,
                  ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- suppress_warnings.js:6:1

Cannot create `p` element because string [1] is incompatible with boolean [2] in property `suppressHydrationWarning`.

   suppress_warnings.js:6:1
     6| <p suppressHydrationWarning="false" />; // Error: Expected boolean
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   suppress_warnings.js:6:29
     6| <p suppressHydrationWarning="false" />; // Error: Expected boolean
                                    ^^^^^^^ [1]
   <BUILTINS>/react-dom.js:402:30
   402|   suppressHydrationWarning?: boolean,
                                     ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- suppress_warnings.js:10:1

Cannot create `aside` element because string [1] is incompatible with boolean [2] in property
`suppressContentEditableWarning`.

   suppress_warnings.js:10:1
    10| <aside contentEditable suppressContentEditableWarning="false" />; // Error: Expected boolean
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   suppress_warnings.js:10:55
    10| <aside contentEditable suppressContentEditableWarning="false" />; // Error: Expected boolean
                                                              ^^^^^^^ [1]
   <BUILTINS>/react-dom.js:432:36
   432|   suppressContentEditableWarning?: boolean,
                                           ^^^^^^^ [2]



Found 20 errors
